--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <li><a href="3.html">JavaScript</a></li>
 </ol>
 <h2>WEB</h2>
-<p>From Wikipedia, the free encyclopedia
-Jump to navigationJump to search
-For website notability on Wikipedia see Wikipedia:Notability (web)
+<p>For website notability on Wikipedia see Wikipedia:Notability (web)
 	Look up Web, web, or webs in Wiktionary, the free dictionary.
 Web most often refers to:
 Spider web, a silken structure created by the animal
