--- a/1.html
+++ b/1.html
@@ -12,6 +12,7 @@
   <li><a href="3.html">JavaScript</a></li>
 </ol>
 <h2>HTML</h2>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/4LIt_ICJyjk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <p><a href="https://www.w3.org/TR/html4/" target="_blank" title="html5 specification"> Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
 Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages.
 There are many types of intermittent fasting practices and multiple ways to implement OMAD.
@@ -23,5 +24,26 @@ Although the content and timing of the meal will vary based on personal preferen
 The potential health benefits of OMAD are primarily related to fasting — restricting calorie intake during a set time period — and calorie restriction in general.
 This type of diet creates a calorie deficit, which can lead to weight loss.
 Other health benefits related to fasting include the potential to reduce heart disease risk factors, decrease blood sugar, and reduce inflammation</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-raxpjgm4vj.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
 </body>
 </html>
